# learn-coding

./: .gitignore  README.md
src/coding_interview/: README.md
src/coding_interview/src/ch_3/: add_binary.cpp  array_search.cpp  array_search_range.cpp  grid_paths.cpp  hotel_booking.cpp  max_distance.cpp  max_sum.cpp  max_unsorted_subarray.cpp  merge_operlaping_interval.cpp  palindrome.cpp  power_function.cpp  power_of_2.cpp  remove_duplicate.cpp  rotated_array_search.cpp  spiral_matrix.cpp  square_root.cpp  string_compression.cpp  string_rotation.cpp  valid_number.cpp
src/ctci/src/cpp/: README.md
src/ctci/src/cpp/ch_01/: check_permutation.cpp  is_unique.cpp
src/learn-algorithm/: README.md
src/learn-algorithm/src/: CMakeLists.txt
src/learn-algorithm/src/LearnAlgorithm/: Bfs.cpp  CMakeLists.txt  MissingNumber.cpp
src/learn-algorithm/src/binary-tree/: CMakeLists.txt  Makefile  binary_tree  binary_tree.cpp
src/learn-c/: README.md
src/learn-c/src/basic/: categorize  categorize.c  geo2json  geo2json.c  gpsdata.csv  hello_pointer  hello_pointer.c  hello_string  monte  monte.c  name_test  name_test.c  order_pizza  order_pizza.c  others.csv  print_nums  print_nums.c  rocks  rocks.c  string_reverse  string_reverse.c
src/learn-c/src/build_basic/: Makefile  encrypt.c  encrypt_string.c  hello_string.c  launch
src/learn-c/src/struct/: fish  fish.c
src/learn-golang/src/: README.md
src/learn-golang/src/linear/: doubly_linked_list.go  linked_list.go  set.go  sync_queue.go
src/learn-golang/src/non_linear/: binary_search_tree.go
src/learn-opencv4/: .gitignore  README.md
src/learn-opencv4/c_plus/src/: CMakeLists.txt
src/learn-opencv4/c_plus/src/ch_01/: CMakeLists.txt  loadDisplaySave.cpp  logo.cpp  mat.cpp
src/learn-opencv4/c_plus/src/ch_02/: CMakeLists.txt  colorReduce.cpp  salt.cpp
src/learn-opencv4/cpp_static_lib/: README.md
src/learn-opencv4/cpp_static_lib/include/opencv2/: cvconfig.h  opencv_modules.hpp
