# CMakeList.txt : CMake project for LearnAlgorithm, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (MissingNumber "MissingNumber.cpp")
add_executable (Bfs "Bfs.cpp")

# TODO: Add tests and install targets if needed.
